# AoC2020

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
aoc_01/: CMakeLists.txt  aoc_01.cc  main.cc
aoc_02/: CMakeLists.txt  aoc_02.cc
aoc_03/: CMakeLists.txt  aoc_03.cc
aoc_04/: CMakeLists.txt  aoc_04.cc
aoc_05/: CMakeLists.txt  aoc_05.cc
aoc_06/: CMakeLists.txt  aoc_06.cc
aoc_07/: CMakeLists.txt  aoc_07.cc
aoc_08/: CMakeLists.txt  aoc_08.cc
aoc_09/: CMakeLists.txt  aoc_09.cc
include/: HolidayBag.hh
